Minor changes, one more label fix, added toDo for ASCII.

--- a/metasyntacticvariables.tex
+++ b/metasyntacticvariables.tex
@@ -55,7 +55,8 @@ variable.
 
 
 \cite{webiste:metasyntacticvariablescatb}
-A name used in examples and understood to stand for whatever thing is under discussion, or any random member of a class of things under discussion. The word foo is the canonical example. To avoid confusion, hackers never (well, hardly ever) use \yyy{‘foo’}{`foo'}\endnote{%
+A name used in examples and understood to stand for whatever thing is under discussion, or any random member of a class of things under discussion. The word foo is the canonical example. To avoid confusion, hackers never (well, hardly ever) use `foo'\endnote{%
+  This particular instance fixed.
   Avoid non-\textsc{ascii} characters.  Left single quote (u\(+\)x2018) should be entered in files as a grave
   accent (u\(+\)x60), and right single quote (u\(+\)x2019) as a plain single quote (0x27).
 
