--- a/thesis-solanki.tex
+++ b/thesis-solanki.tex
@@ -22,6 +22,7 @@
 \usepackage{amssymb}
 \usepackage{tcolorbox}
 \usepackage{float}      %% added dgc 2015-12-07
+\usepackage{varioref}   %% added dgc 2016-02-01
 
 %% added dgc 2015-12-07
 \floatstyle{ruled}%
