--- a/toDo.tex
+++ b/toDo.tex
@@ -33,6 +33,8 @@
 
 \item [\textbf{Mehul}]
 
+\item Remove the remaining non-\textsc{ascii} characters.
+
 \item
   We need to decide on which version of ghc this compiles against, and ensure that the code does indeed compile
   against that version (\Verb!ErrorT! versus \Verb!ExceptT! and the like).
