Added 4 toDo items.

--- a/toDo.tex
+++ b/toDo.tex
@@ -47,6 +47,12 @@
   Watch out for sentences that begin with ``But''.
 
 \item
+  There are (as of 2016-02-01 07:45:33) around 30 \macroName{xxx} and \macroName{yyy} corrections.  Fix these, and
+  for each one see if there are other changes in the same pattern that I haven't caught.
+
+\item
+  Replace \S\S~\ref{sec:thes-impr-contr}--\ref{sec:work-in-points} with
+  paragraphs.  Call the result ``\textsl{Thesis Contributions}''.
 
 \item \label{item:5}
   Determine how you want to punctuate items in enumerated (and other)
@@ -64,6 +70,14 @@
   Write enough of Chapters \ref{proto1}--\ref{proto4} that we can decide
   what material is needed in Chapters~\ref{chap:quasiquotation}
   and~\ref{chap:metasyntacticvariables}.
+
+\item
+  Rewrite \S~\ref{sec:exec-models-prolog} as suggested at the top of that section. 
+
+\item
+  Abstract is too long.  (Guidelines limit it to 150 words.  Currently
+  at 275-ish.)
+
 
 
 \item [\textbf{David}]
