removed some toDo items.

--- a/toDo.tex
+++ b/toDo.tex
@@ -19,17 +19,13 @@
 \begin{enumerate}
 \item Write about this chapter and chapter conclusion for all chapters
 
-\item Till haskell why haskell chapter 11 wait for feedback
-
-\item In the remaining chapters write according to flow == move around stuff or add new content.
-\end{enumerate}
-
 \begin{enumerate}
-\item [\textbf{2015-10-29}]
-\item [\textbf{Either}]
+\item [\textbf{Meeting on 5th Novemeber 2015}]
+  (\textit{Items merged into list below.})
+
+\item [\textbf{Both}]
+
 \item
-  We need a convention for what words to capitalize in chapter and
-  section titles.
 
 \item [\textbf{Mehul}]
 
@@ -40,8 +36,6 @@
   against that version (\Verb!ErrorT! versus \Verb!ExceptT! and the like).
 
 \item
-  Abstract is too long.  (Guidelines limit it to 150 words.  Currently
-  at 275-ish.)
 
 \item
   Watch out for sentences that begin with ``But''.
