--- a/relatedWork.tex
+++ b/relatedWork.tex
@@ -102,7 +102,19 @@ Often this function itself is called the algebra, hence my use of the name alg i
 \end{code-list}
 
 
-\section{The execution models of \progLang{Prolog} \cite{Sterling:1994:APA:175753}}
+%% dgc : The [] in the section heading avoids having the reference show
+%% up in the table of contents.  
+\section[{The execution models of \progLang{Prolog}}]{The execution models of \progLang{Prolog} \cite{Sterling:1994:APA:175753}}\label{sec:exec-models-prolog}
+\david{Rewrite this to be clear about the differences between an
+  \textit{abstract} \progLang{Prolog} and the choices made by concrete
+  implementations, such as Edinburgh \progLang{Prolog}.
+}
+
+\david{Move the citation from the section title, and explicitly state that
+  the material here has been exerpted from
+  \cite{Sterling:1994:APA:175753}, with page or chapter references.
+}
+
 Two major decisions must be taken for \progLang{Prolog} to resolve a query:
 \begin{enumerate}
 \item Scheduling policy
