minor changes in proto2.tex .

--- a/proto2.tex
+++ b/proto2.tex
@@ -18,10 +18,12 @@ The language modifications and unification mechanism have been taken from Chapte
 in with the other components such as the search strategy of the library.
 
 
-\section{How prolog-0.2.0.1 works}
+\section{How \protect\codeLibrary{prolog-0.2.0.1} works}
 
 As described in the previous chapter about extending languages to incorporate functionality, this prototype applies
-the procedure to the eDSL in \cite{prolog-lib}.
+the procedure to the eDSL in \cite{prolog-lib}.\endnote{%
+  See the comments in \S~\ref{subsec:thoughts-chapt-proto2}.
+}
 
 From the Figure~\ref{tab:origgramp0201} we will focus on \haskellConstruct{Terms}, since the others just
 add wrappers around expressions which can be created by it.
