Added endnotes to proposedWork.tex .

--- a/proposedWork.tex
+++ b/proposedWork.tex
@@ -42,7 +42,10 @@ discussed below, along with their shortcomings.
   a result.
   Another implementation \cite{website:takashi-workplace} based of it simplifies the notation to a list format.
   Nonetheless, both implementations lack simplicity and support for basic \progLang{Prolog} features such as
-  \textit{cuts, fails, assert} among others.
+  \markWord{cuts},
+  \markWord{fails},
+  \markWord{assert}
+  among others.
 
 \begin{comment}
 \item
@@ -125,7 +128,9 @@ Taking into consideration the above, there is quite some room for improvement an
 \section{Things that this thesis fixes}\label{sec:things-fixed}
 
 \david{Here is a discussion of problems mentioned above that this thesis
-tackles}
+tackles.}\endnote{%
+  Move material from \S~\ref{sec:existing-work-by-others} to \S~\ref{sec:things-fixed}.
+}
 
 \section{Chapter Recapitulation}
 
