tiny change in proto1.tex .

--- a/proto1.tex
+++ b/proto1.tex
@@ -239,7 +239,8 @@ We have a \progLang{Prolog}-like language in \progLang{Haskell} defined via \has
 it into a non-recursive data type. Basically we do unification monadically.
 
 \section{Creating a data type}
-\begin{figure}[H]
+%% dgc removed the [H] as it forces a bad page break.
+\begin{figure}
   \includegraphics[width=1\textwidth]{prototype_1_implementation_architecture.png}
   \caption{Prototype 1 Implementation architecture}
   \label{fig:proto1-impl-arch}
