commeneted subfiles for quasiquotation and metasyntacticvariables

--- a/thesis-solanki.tex
+++ b/thesis-solanki.tex
@@ -344,11 +344,11 @@
 %	\subfile{ummcpp}
 %	\clearpage
 		
-	\subfile{quasiquotation}
-	\clearpage
+%	\subfile{quasiquotation}
+%	\clearpage
 	
-	\subfile{metasyntacticvariables}
-	\clearpage
+%	\subfile{metasyntacticvariables}
+%	\clearpage
 	
 %	\subfile{relatedtermskeywords}
 %	\clearpage
