--- a/bibliography.bib
+++ b/bibliography.bib
@@ -1483,6 +1483,11 @@ url = {http://www.thesoftwareguild.com/history-of-programming-languages/}
  publisher = {MIT Press},
  address = {Cambridge, MA, USA},
 }
+@article{machadomodel,
+  title={Model-Based Methodologies for Pervasive and Embedded Software},
+  author={Machado, Ricardo J and Maciel, Rita Suzana P and Rubin, Julia and Botterweck, Goetz},
+  publisher={Springer}
+}
 @comment{website:,
 title = ,
 author = ,
